[tool.poetry]
name = "urlshortener"
version = "0.1.0"
description = ""
authors = ["Long Trần <tranhuuhoanglong248@gmail.com>"]
readme = "README.md"
packages = [{include = "urlshortener"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
